--- a/Secrets/bin/AndroidManifest.xml
+++ b/Secrets/bin/AndroidManifest.xml
@@ -5,9 +5,8 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
-
 
     <application
         android:allowBackup="true"
@@ -22,6 +21,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.secrets.SaveEditActivity"
+            android:label="@string/title_activity_save_edit" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.secrets.MainActivity" />
         </activity>
     </application>
 
