--- a/Secrets/AndroidManifest.xml
+++ b/Secrets/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.secrets.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +25,8 @@
         </activity>
         <activity
             android:name="com.example.secrets.SaveEditActivity"
-            android:label="@string/title_activity_save_edit" >
+            android:label="@string/title_activity_save_edit"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.secrets.MainActivity" />
